# lake

./: Cargo.toml  LICENSE.md  build.rs  cabal.project  hie.yaml
debruijn/: Cargo.toml
debruijn/src/: context.rs  debruijn.rs  lib.rs  type_nat.rs
debruijn/src/num/: mod.rs  nat.rs  one.rs  succ.rs
generator/: generator.cabal
generator-lake/: cabal.project  generator-lake.cabal
generator-lake/cbits/: Lib.c  Lib.def
generator-lake/src/Language/Lake/AST/: DeBruijn.hs
generator/app/: Main.hs
generator/src/: Lib.hs
lake-binder/: Cargo.toml
lake-binder/src/: context.rs  debruijn.rs  type_nat.rs
lake-binder/src/num/: constant.rs  mod.rs  pred.rs  zero.rs
lake-generator/: Cargo.toml  Setup.hs  build.rs  cabal.project  lake-generator.cabal
lake-generator/cbits/: Lib.def  Lib.h
lake-generator/src/: Lib.hs  ast.rs  generator.rs  lib.rs
lake-generator/src/Foreign/C/: ByteString.hs
lake-generator/src/Language/Lake/: AST.hs  Generator.hs
lake-generator/src/Language/Lake/AST/: DeBruijn.hs
src/: ast.rs  lambda.rs  parser.rs
tree-sitter-lake/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter-lake/bindings/node/: binding.cc  index.js
tree-sitter-lake/bindings/rust/: lib.rs
tree-sitter-lake/src/: grammar.json  parser.c  scanner.c
