[package]
name = "lake"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "0.20.10"
tree-sitter-lake = { path = "tree-sitter-lake" }
lake-generator = { path = "lake-generator", optional = true }

[features]
generator = ["dep:lake-generator"]
