cabal-version:   3.0
name:            lake-generator
version:         0.0.1.0
synopsis:        Lake program generator for testing.
license-file:    LICENSE.md
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com
copyright:       2023 (c) Wen Kokke
category:        Testing
build-type:      Custom
extra-doc-files: LICENSE.md

custom-setup
  setup-depends:
    , base       >=4
    , Cabal      >=2.0.0.2
    , directory  >=1
    , filepath   >=1

common warnings
  ghc-options: -Wall

foreign-library lake-generator
  import:           warnings
  type:             native-shared

  -- 01-04-2023:
  -- Standalone builds appear to work with macOS builds of GHC
  if os(osx)
    options: standalone

  if os(windows)
    options:      standalone
    mod-def-file: cbits/Lib.def

  other-modules:
    Foreign.C.ByteString
    Language.Lake.AST
    Language.Lake.AST.DeBruijn
    Language.Lake.Generator
    Lib

  includes:         cbits/Lib.h
  build-depends:
    , aeson         >=2.1.2   && <2.2
    , base          >=4.17    && <5
    , bytestring    >=0.11.4  && <0.12
    , cborg         >=0.2.9   && <0.3
    , cborg-json    >=0.2.5   && <0.3
    , lazy-search   >=0.1.3.0 && <0.2
    , size-based    >=0.1.3.1 && <0.2
    , testing-feat  >=1.1.1.1 && <1.2

  hs-source-dirs:   src
  default-language: Haskell2010
