[package]
name = "tree-sitter-lake"
description = "Lake grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "lake"]
categories = ["parsing", "text-editors"]
edition = "2018"
license-file = "LICENSE.md"
build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "^0.20.10"

[build-dependencies]
cc = "^1.0"
